--- a/day05/css/product.css
+++ b/day05/css/product.css
@@ -1,21 +1,29 @@
 #container{
-    width: 800px;
+    width: 1000px;
     margin: 20px auto;
     border: none;     
 }
+header{
+    height: 80px;
+}
 nav{margin-bottom: 20px;}
 section{height: 600px;}
-div{
+/* div{
     width: 700px;
     border: 1px solid #ccc;
     padding: 20px;
     margin-bottom: 20px;
-}
+} */
 #description{
+    border: 1px solid #ccc;
+    padding: 20px;
+    height: 500px;
     border-top-left-radius: 30px;
     border-top-right-radius: 30px;
 }
 #product{
+    padding: 20px;
+    border: 1px solid #ccc;
     border-bottom-left-radius: 30px;
     border-bottom-right-radius: 30px;
 }
@@ -24,5 +32,11 @@ table, th, td{
     border-collapse: collapse;
 }
 th, td{padding: 10px 20px;}
-#description p{line-height: 2em;}
+#description p{
+    padding: 20px;
+    line-height: 2em;}
+#receipe{
+    padding: 20px;
+    border: 1px solid #ccc;
+}
 #receipe ol li{line-height: 2em;}
