--- a/day07-jeju/css/style.css
+++ b/day07-jeju/css/style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Merienda:wght@700&family=Nanum+Pen+Script&display=swap');
 /* 전체 영역 */
 *{margin: 0; padding: 0;}
 #container{
@@ -14,6 +15,9 @@ header #logo{
     width: 250px;
     float: left;
     padding: 15px 25px;
+}
+header #logo h1{
+    font-family: Merienda;
 }
 header #logo a{
     text-decoration: none;
@@ -50,6 +54,10 @@ header #topMenu li a:hover{
 #contents section{
     margin: 30px auto;
 }
+#contents section p strong{
+    line-height: 4em;
+    font-size: 1.1em;
+}
 #contents section div{
     margin: 20px auto;
 }
@@ -64,6 +72,10 @@ header #topMenu li a:hover{
     margin-right: 15px;
     border-radius: 10px;
 }
+#contents .schedule ul li{
+    margin: 10px 30px;
+    list-style: none;
+}
 #contents #activity{
     height: 300px;
 }
@@ -71,6 +83,20 @@ header #topMenu li a:hover{
     float: left;
     margin-right: 15px;
     border-radius: 10px;
+}
+#contents #sightseeing{
+    height: 300px;
+}
+#contents #sightseeing ul li{
+    margin: 10px 20px;
+    list-style: square;
+}
+#contents #sightseeing ul li a{
+    text-decoration: none;
+    color: #000;
+}
+#contents #sightseeing ul li a:hover{
+    text-decoration: underline;
 }
 
 /* product 스타일 */
@@ -86,7 +112,7 @@ header #topMenu li a:hover{
 }
 #product section{
     margin: 10px auto;
-    border: 1px solid #ccc;
+    border: 1px dotted #aaa;
     padding: 20px 50px;
 }
 #product #description{
@@ -145,7 +171,7 @@ header #topMenu li a:hover{
 /* footer 영역 */
 footer{
     height: 100px;
-    margin-top: 100px;
+    margin-top: 50px;
     border-top: 2px solid #222;
 }
 footer #bottomMenu{
